--- a/index.html
+++ b/index.html
@@ -10,97 +10,113 @@
 
     <style>
         :root { --gold: #facc15; --bg: #0f172a; --card: #1e293b; --green: #22c55e; --red: #ef4444; }
-        body { background: var(--bg); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; overflow-x: hidden; }
+        body { background: var(--bg); color: white; font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; overflow: hidden; }
 
-        /* Splash Transition */
+        /* 1. መግቢያ Transition */
         #splash-screen {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: var(--bg); display: flex; justify-content: center; align-items: center;
-            z-index: 9999; animation: fadeOut 1s forwards; animation-delay: 2s;
+            background: var(--bg); display: flex; flex-direction: column;
+            justify-content: center; align-items: center; z-index: 9999;
+            animation: fadeOut 2.5s forwards; animation-delay: 2s;
         }
-        #splash-screen h1 { font-size: 3.5rem; color: var(--gold); font-weight: 900; }
+        #splash-screen h1 {
+            font-size: 3rem; color: var(--gold); font-weight: 900;
+            text-transform: uppercase; letter-spacing: 3px;
+            animation: zoomIn 1.2s ease-out; text-shadow: 0 0 20px rgba(250, 204, 21, 0.4);
+        }
+        @keyframes zoomIn { from { transform: scale(0.6); opacity: 0; } to { transform: scale(1); opacity: 1; } }
         @keyframes fadeOut { to { opacity: 0; visibility: hidden; } }
 
-        /* Main UI */
-        .container { padding: 15px; max-width: 500px; margin: auto; opacity: 0; animation: fadeInMain 1s forwards; animation-delay: 2.5s; }
+        /* ዋናው ገጽ */
+        #main-wrapper { opacity: 0; animation: fadeInMain 1s forwards; animation-delay: 2.2s; overflow-y: auto; height: 100vh; }
         @keyframes fadeInMain { to { opacity: 1; } }
 
-        .app-title { text-align: center; padding: 20px 0; }
-        .app-title h2 { margin: 0; font-size: 2.5rem; color: var(--gold); font-weight: 900; }
+        .app-header { text-align: center; padding: 15px; background: #111827; border-bottom: 2px solid var(--gold); }
+        .app-header h2 { margin: 0; color: var(--gold); font-size: 1.4rem; letter-spacing: 2px; }
 
-        .user-line { display: flex; justify-content: space-between; padding: 12px; background: rgba(255,255,255,0.05); border-radius: 10px; margin-bottom: 15px; }
-        .u-bal { color: var(--green); font-weight: 900; }
+        .user-bar { display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; background: rgba(255,255,255,0.05); }
+        .u-bal { color: var(--green); font-weight: 900; font-size: 1.1rem; }
 
-        /* Price Grid */
-        .price-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin-bottom: 15px; }
-        .btn-price { 
-            background: var(--card); color: white; border: 1px solid var(--gold); 
-            padding: 15px 5px; border-radius: 12px; font-weight: bold; font-size: 1.2rem;
-            cursor: pointer; box-shadow: 0 4px 0 #000;
+        .page { display: none; padding: 15px; }
+        .page.active { display: block; }
+
+        /* 2. የብር ዝርዝር Grid */
+        .price-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 12px; margin: 20px 0; }
+        .btn { width: 100%; padding: 14px; border: none; border-radius: 12px; font-weight: bold; cursor: pointer; transition: 0.2s; }
+        .btn-price { background: var(--card); color: white; border: 1px solid rgba(250, 204, 21, 0.3); font-size: 1.1rem; box-shadow: 0 4px 0 rgba(0,0,0,0.3); }
+        .btn-price:active { transform: translateY(2px); box-shadow: none; }
+        .btn-gold { background: var(--gold); color: black; box-shadow: 0 4px 0 #a16207; margin-top: 10px; }
+
+        /* 3. ተጫዋች በመጠበቅ ላይ (ከታች) */
+        .status-footer {
+            margin-top: 25px; padding: 15px; background: rgba(30, 41, 59, 0.5);
+            border-radius: 18px; border: 1px solid rgba(250, 204, 21, 0.2); text-align: center;
         }
+        .progress-bg { background: #0f172a; height: 6px; border-radius: 3px; margin-top: 10px; overflow: hidden; }
+        .progress-fill { width: 0%; height: 100%; background: var(--gold); transition: width 1s linear; }
 
-        /* Status Box */
-        .status-box { padding: 15px; background: rgba(30, 41, 59, 0.9); border-radius: 15px; border: 1px dashed var(--gold); text-align: center; }
-        .progress-bar { width: 100%; background: #000; height: 8px; border-radius: 4px; margin-top: 10px; overflow: hidden; }
-        .progress-fill { width: 0%; height: 100%; background: var(--gold); transition: width 0.5s; }
-
-        /* Bingo Board */
-        .bingo-grid { display: grid; grid-template-columns: repeat(5, 1fr); gap: 5px; background: #334155; padding: 10px; border-radius: 10px; }
-        .cell { aspect-ratio: 1; background: white; color: black; display: flex; align-items: center; justify-content: center; font-weight: 900; border-radius: 5px; font-size: 1.1rem; }
-        .cell.marked { background: var(--red) !important; color: white !important; border-radius: 50%; }
-        .cell.hint { background: #fef08a; animation: pulse 1s infinite; }
+        /* ካርቴላ */
+        .bingo-grid { display: grid; grid-template-columns: repeat(5, 1fr); gap: 5px; background: #334155; padding: 10px; border-radius: 15px; max-width: 320px; margin: 15px auto; }
+        .cell { aspect-ratio: 1; background: white; color: #0f172a; display: flex; align-items: center; justify-content: center; font-weight: 800; border-radius: 6px; font-size: 1rem; cursor: pointer; }
+        .cell.marked { background: var(--red) !important; color: white !important; border-radius: 50%; transform: scale(0.9); }
+        .cell.hint { background: #fef08a; animation: pulse 1s infinite; box-shadow: 0 0 10px var(--gold); }
         @keyframes pulse { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.05); } }
 
-        .mute-btn { background: none; border: 1px solid var(--gold); color: var(--gold); padding: 5px 10px; border-radius: 8px; cursor: pointer; font-size: 0.8rem; }
+        .ball { width: 75px; height: 75px; background: radial-gradient(circle at 30% 30%, #fff, var(--gold), #a16207); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2.5rem; font-weight: 900; color: #000; margin: 15px auto; border: 4px solid white; box-shadow: 0 5px 15px rgba(0,0,0,0.4); }
     </style>
 </head>
 <body>
 
-    <div id="splash-screen"><h1>ETHIO BINGO</h1></div>
+    <div id="splash-screen">
+        <h1>ETHIO BINGO</h1>
+        <small style="letter-spacing: 3px; opacity: 0.6;">LOADING...</small>
+    </div>
 
-    <div class="container">
-        <div id="home-page">
-            <div class="app-title"><h2>ETHIO BINGO</h2></div>
-
-            <div class="user-line">
-                <div>
-                    <span id="u-name">...</span><br>
-                    <button id="mute-btn" class="mute-btn" onclick="toggleMute()">🔊 ድምፅ በርቷል</button>
-                </div>
-                <div style="text-align: right;">
-                    <span class="u-bal" id="u-bal">0.00 ETB</span>
-                </div>
-            </div>
-
-            <div class="price-grid">
-                <button onclick="pickPrice(10)" class="btn-price">10</button>
-                <button onclick="pickPrice(20)" class="btn-price">20</button>
-                <button onclick="pickPrice(50)" class="btn-price">50</button>
-                <button onclick="pickPrice(100)" class="btn-price">100</button>
-                <button onclick="pickPrice(500)" class="btn-price">500</button>
-                <button onclick="pickPrice(1000)" class="btn-price">1000</button>
-            </div>
-
-            <div style="display: flex; gap: 10px; margin-bottom: 20px;">
-                <button style="flex:1; padding:12px; border-radius:10px; border:none; background:var(--gold); font-weight:bold;" onclick="alert('TID ያስገቡ')">📥 ብር አስገባ</button>
-                <button style="flex:1; padding:12px; border-radius:10px; border:none; background:var(--red); color:white; font-weight:bold;" onclick="alert('ስልክ ያስገቡ')">📤 ብር አውጣ</button>
-            </div>
-
-            <div class="status-box">
-                <small>ተጫዋቾችን በመጠበቅ ላይ (200 ካርቴላ ዝግጁ ነው)</small>
-                <h2 id="players-count">0 / 5</h2>
-                <div class="progress-bar"><div class="progress-fill" id="p-bar"></div></div>
-            </div>
+    <div id="main-wrapper">
+        <div class="app-header">
+            <h2>ETHIO BINGO</h2>
         </div>
 
-        <div id="game-page" style="display: none;">
-            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
-                <button onclick="location.reload()" style="background:var(--red); color:white; border:none; padding:8px 15px; border-radius:10px;">❌ ውጣ</button>
-                <b id="game-info" style="color:var(--gold)"></b>
+        <div class="user-bar">
+            <div><b id="u-name">ተጫዋች</b></div>
+            <div><b class="u-bal" id="u-bal">0.00 ETB</b></div>
+        </div>
+
+        <div id="app-content">
+            <div id="home-page" class="page active">
+                <div class="price-grid">
+                    <button onclick="pickPrice(10)" class="btn btn-price">10</button>
+                    <button onclick="pickPrice(20)" class="btn btn-price">20</button>
+                    <button onclick="pickPrice(50)" class="btn btn-price">50</button>
+                    <button onclick="pickPrice(100)" class="btn btn-price">100</button>
+                    <button onclick="pickPrice(500)" class="btn btn-price">500</button>
+                    <button onclick="pickPrice(1000)" class="btn btn-price">1000</button>
+                </div>
+
+                <button class="btn btn-gold" onclick="document.getElementById('dep-form').style.display='block'">📥 ብር አስገባ</button>
+                <div id="dep-form" style="display:none; margin-top:10px;">
+                    <input type="text" id="tid" placeholder="TID ያስገቡ" style="width:100%; padding:14px; border-radius:10px; border:none; background:var(--card); color:white; box-sizing:border-box;">
+                    <button class="btn btn-gold" onclick="sendDep()">አረጋግጥ</button>
+                </div>
+
+                <div class="status-footer">
+                    <small id="wait-msg" style="color:var(--gold)">ተጫዋቾችን በመጠበቅ ላይ...</small>
+                    <h2 id="players-count" style="margin:5px 0;">0 / 5</h2>
+                    <div class="progress-bg"><div class="progress-fill" id="p-bar"></div></div>
+                </div>
+
+                <button id="admin-btn" class="btn" style="background:var(--green); color:white; display:none; margin-top:15px;" onclick="showAdmin()">🔧 ዳኛ ገጽ</button>
             </div>
-            <div id="live-ball" style="width:70px; height:70px; background:radial-gradient(circle at 30% 30%, #fff, var(--gold)); border-radius:50%; display:flex; align-items:center; justify-content:center; font-size:2.2rem; font-weight:900; color:#000; margin:15px auto; border:3px solid white;">?</div>
-            <div class="bingo-grid" id="board"></div>
-            <button onclick="validateBingo()" style="width:100%; background:var(--gold); padding:18px; border:none; border-radius:12px; font-weight:900; font-size:1.5rem; margin-top:15px; cursor:pointer;">BINGO!</button>
+
+            <div id="game-page" class="page">
+                <div style="display:flex; justify-content:space-between; align-items:center;">
+                    <button onclick="location.reload()" style="background:var(--red); color:white; border:none; padding:8px 15px; border-radius:10px; font-weight:bold;">❌ ውጣ</button>
+                    <b id="game-info" style="color:var(--gold); font-size:1.1rem;"></b>
+                </div>
+                <div class="ball" id="live-ball">?</div>
+                <div class="bingo-grid" id="board"></div>
+                <button class="btn btn-gold" style="font-size:1.5rem; padding:18px;" onclick="validateBingo()">BINGO!</button>
+            </div>
         </div>
     </div>
 
@@ -110,30 +126,37 @@
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
         const tg = window.Telegram.WebApp;
+        tg.expand();
 
-        let uName = "ተጫዋች", uid = Date.now(), myBal = 0, drawn = [], selectedPrice = 0, isMuted = false;
-        if (tg.initDataUnsafe?.user) { uName = tg.initDataUnsafe.user.first_name; uid = tg.initDataUnsafe.user.id; }
+        let uName = "ተጫዋች", uid = Date.now();
+        if (tg.initDataUnsafe?.user) {
+            uName = tg.initDataUnsafe.user.first_name;
+            uid = tg.initDataUnsafe.user.id;
+        }
         document.getElementById('u-name').innerText = uName;
 
-        function toggleMute() {
-            isMuted = !isMuted;
-            document.getElementById('mute-btn').innerText = isMuted ? "🔇 ድምፅ ጠፍቷል" : "🔊 ድምፅ በርቷል";
-        }
+        let myBal = 0, drawn = [], selectedPrice = 0;
+        if(uid == ADMIN_ID) document.getElementById('admin-btn').style.display = 'block';
 
         db.ref('users/'+uid+'/bal').on('value', s => { myBal = s.val()||0; document.getElementById('u-bal').innerText = myBal.toFixed(2)+" ETB"; });
         
         db.ref('game/players').on('value', s => {
             const count = s.numChildren();
             document.getElementById('players-count').innerText = `${count} / 5`;
-            document.getElementById('p-bar').style.width = (count * 20) + "%";
-            if(count >= 5 && uid == ADMIN_ID) setTimeout(startAuto, 10000);
+            if(count >= 5) {
+                document.getElementById('p-bar').style.width = "100%";
+                if(uid == ADMIN_ID) setTimeout(startAuto, 10000);
+            } else {
+                document.getElementById('p-bar').style.width = "0%";
+            }
         });
 
         db.ref('game/drawn').on('value', s => {
             drawn = s.val()||[];
             if(drawn.length > 0) {
-                document.getElementById('live-ball').innerText = drawn[drawn.length-1];
-                document.querySelectorAll('.cell').forEach(c => { if(parseInt(c.innerText) === drawn[drawn.length-1]) c.classList.add('hint'); });
+                const last = drawn[drawn.length-1];
+                document.getElementById('live-ball').innerText = last;
+                document.querySelectorAll('.cell').forEach(c => { if(parseInt(c.innerText) === last) c.classList.add('hint'); });
             }
         });
 
@@ -142,15 +165,14 @@
             selectedPrice = p;
             db.ref('users/'+uid+'/bal').set(myBal - p);
             db.ref('game/players/'+uid).set({name: uName});
-            setupBoard(); // 200 ካርቴላ እዚህ ውስጥ ነው የሚፈጠረው
-            document.getElementById('home-page').style.display = 'none';
-            document.getElementById('game-page').style.display = 'block';
+            setupBoard();
+            document.querySelectorAll('.page').forEach(pg => pg.classList.remove('active'));
+            document.getElementById('game-page').classList.add('active');
             document.getElementById('game-info').innerText = `${p} ETB`;
         }
 
         function setupBoard() {
             const board = document.getElementById('board'); board.innerHTML = "";
-            // ከ 1-75 ቁጥሮች ውስጥ 25ቱን በዘፈቀደ ለዚህ ተጫዋች እንሰጣለን
             let nums = Array.from({length:75},(_,i)=>i+1).sort(()=>Math.random()-0.5).slice(0,25);
             nums.forEach(n => {
                 let c = document.createElement('div'); c.className = 'cell'; c.innerText = n;
@@ -161,15 +183,15 @@
 
         function validateBingo() {
             const marked = document.querySelectorAll('.cell.marked');
-            if(marked.length < 5) return alert("ቢያንስ 5 ቁጥር!");
+            if(marked.length < 5) return alert("ቢያንስ 5 ቁጥር መርጠህ ቢንጎ በል!");
             let win = true;
             marked.forEach(c => { if(!drawn.includes(parseInt(c.innerText))) win = false; });
             if(win) {
                 const prize = (selectedPrice * 5) * 0.8;
                 db.ref('users/'+uid+'/bal').transaction(b => (b||0) + prize);
                 db.ref('game/drawn').set([]); db.ref('game/players').remove();
-                alert(`🎉 ቢንጎ! ${prize} ETB`); location.reload();
-            } else alert("ያልወጣ ቁጥር አለ!");
+                alert(`🎉 ቢንጎ! ${prize} ETB ገብቷል።`); location.reload();
+            } else alert("ያልወጣ ቁጥር አለህ!");
         }
 
         function startAuto() {
@@ -179,6 +201,13 @@
                 if(!gameSet.includes(n)) { gameSet.push(n); db.ref('game/drawn').set(gameSet); }
                 if(gameSet.length >= 75 || gameSet.length == 0) clearInterval(iv);
             }, 4000);
+        }
+
+        function sendDep() {
+            const t = document.getElementById('tid').value;
+            db.ref('all_requests').push({uid, name:uName, tid:t, type:'DEP', status:'pending'});
+            alert("TID ተልኳል!");
+            document.getElementById('dep-form').style.display='none';
         }
     </script>
 </body>
