--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Dagi:
 <!DOCTYPE html>
 <html lang="am">
 <head>
@@ -55,7 +54,7 @@ Dagi:
         </div>
     </div>
 
-<div id="app-content">
+    <div id="app-content">
         <div id="home-page" class="page active">
             <div style="background: rgba(250, 204, 21, 0.1); padding: 10px; border-radius: 10px; border: 1px dashed var(--gold); margin-bottom: 15px;">
                 <small style="color:var(--gold)">🏆 የቅርብ ጊዜ አሸናፊ፦</small>
@@ -110,7 +109,7 @@ Dagi:
             <button class="btn" style="background:#444; color:white;" onclick="showPage('home-page')">ተመለስ</button>
         </div>
 
-<div id="game-page" class="page">
+        <div id="game-page" class="page">
             <div style="display:flex; justify-content:space-between; align-items:center;">
                 <button onclick="confirmExit()" style="background:var(--red); color:white; border:none; padding:8px 15px; border-radius:8px;">❌ ውጣ</button>
                 <span id="card-label"></span>
@@ -182,9 +181,8 @@ Dagi:
             playSfx('sound-coin');
             document.getElementById('card-label').innerText = "ካርቴላ #"+n; showPage('game-page'); 
             const board = document.getElementById('board'); board.innerHTML = ""; 
-            let p = Array.from({length:75},(_,i)=>i+1).sort(()=>Math.random()-0.5);
-
-for(let i=0; i<25; i++) { 
+            let p = Array.from({length:75},(_,i)=>i+1).sort(()=>Math.random()-0.5); 
+            for(let i=0; i<25; i++) { 
                 let c = document.createElement('div'); c.className='cell'; c.innerText=p[i]; 
                 if (drawn.includes(p[i])) c.classList.add('hint');
                 c.onclick = function() { if (drawn.includes(parseInt(this.innerText))) this.classList.toggle('marked'); }; 
@@ -199,7 +197,7 @@ for(let i=0; i<25; i++) {
                 s.forEach(c => {
                     let r = c.val(); if(r.status == 'pending') {
                         let d = document.createElement('div'); d.className = 'tx-card';
-                        d.innerHTML = <b>${r.type}</b>: ${r.name} | ${r.tid || r.amount} <button onclick="approve('${c.key}','${r.uid}','${r.type}')" class="btn btn-gold">አጽድቅ</button>;
+                        d.innerHTML = `<b>${r.type}</b>: ${r.name} | ${r.tid || r.amount} <button onclick="approve('${c.key}','${r.uid}','${r.type}')" class="btn btn-gold">አጽድቅ</button>`;
                         list.appendChild(d);
                     }
                 });
