--- a/index.html
+++ b/index.html
@@ -28,35 +28,29 @@
             min-height: 100vh;
         }
 
-        /* የሚያምር Splash */
         #splash-screen { 
             position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
             background: var(--bg); display: flex; justify-content: center; align-items: center; 
             z-index: 9999; animation: fadeOut 0.8s forwards 2s; 
         }
-        #splash-screen h1 { 
-            font-size: 4rem; color: var(--gold); font-weight: 900; 
-            text-shadow: 0 0 30px var(--gold-glow);
-            letter-spacing: -2px;
-        }
+        #splash-screen h1 { font-size: 3.5rem; color: var(--gold); font-weight: 900; text-shadow: 0 0 30px var(--gold-glow); }
 
         @keyframes fadeOut { to { opacity: 0; visibility: hidden; } }
 
-        /* Winner UI - ስሙ ብቻ በኒዮን */
         #winner-overlay { 
             position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
             background: rgba(2, 6, 23, 0.95); display: none; 
             justify-content: center; align-items: center; z-index: 2000; 
         }
         #winner-name { 
-            color: var(--gold); font-size: 5rem; font-weight: 900; 
+            color: var(--gold); font-size: 4rem; font-weight: 900; 
             text-shadow: 0 0 50px var(--gold); 
             animation: pulse 1s infinite alternate;
         }
         @keyframes pulse { from { transform: scale(1); } to { transform: scale(1.1); } }
 
         .header { 
-            padding: 15px 20px; 
+            padding: 12px 20px; 
             background: rgba(15, 23, 42, 0.8); 
             backdrop-filter: blur(10px);
             border-bottom: 1px solid rgba(250, 204, 21, 0.3); 
@@ -64,65 +58,53 @@
             position: sticky; top: 0; z-index: 100;
         }
 
-        .page { display: none; padding: 20px; animation: slideUp 0.4s ease-out; }
+        .page { display: none; padding: 15px; animation: slideUp 0.4s ease-out; }
         .page.active { display: block; }
         @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
-        /* Luxury Ball Design */
         .ball { 
-            width: 100px; height: 100px; 
+            width: 85px; height: 85px; 
             background: radial-gradient(circle at 30% 30%, #fff, var(--gold) 40%, #854d0e); 
             border-radius: 50%; display: flex; align-items: center; justify-content: center; 
-            font-size: 3.5rem; font-weight: 900; color: #000; 
-            margin: 20px auto; border: 5px solid #fff; 
-            box-shadow: 0 10px 30px rgba(0,0,0,0.8), inset 0 -5px 15px rgba(0,0,0,0.3);
+            font-size: 2.8rem; font-weight: 900; color: #000; 
+            margin: 15px auto; border: 4px solid #fff; 
+            box-shadow: 0 10px 25px rgba(0,0,0,0.7);
         }
 
-        .recent-numbers { display: flex; justify-content: center; gap: 12px; margin-bottom: 25px; }
+        .recent-numbers { display: flex; justify-content: center; gap: 10px; margin-bottom: 20px; }
         .recent-ball { 
-            width: 45px; height: 45px; background: var(--card-bg); 
+            width: 38px; height: 38px; background: var(--card-bg); 
             border-radius: 50%; display: flex; align-items: center; justify-content: center; 
-            font-size: 1.1rem; font-weight: bold; border: 1px solid rgba(250, 204, 21, 0.5); color: var(--gold); 
+            font-size: 0.95rem; font-weight: bold; border: 1px solid rgba(250, 204, 21, 0.4); color: var(--gold); 
         }
 
-        /* የካርቴላ ዲዛይን ማሻሻያ */
+        /* የካርቴላ ፎንት መጠን ተቀንሷል */
         .bingo-grid { 
-            display: grid; grid-template-columns: repeat(5, 1fr); gap: 10px; 
-            background: rgba(255, 255, 255, 0.05); padding: 15px; 
-            border-radius: 24px; max-width: 380px; margin: auto; 
+            display: grid; grid-template-columns: repeat(5, 1fr); gap: 8px; 
+            background: rgba(255, 255, 255, 0.05); padding: 12px; 
+            border-radius: 20px; max-width: 340px; margin: auto; 
             border: 1px solid rgba(255,255,255,0.1);
-            backdrop-filter: blur(5px);
         }
         .cell { 
             aspect-ratio: 1; background: #fff; color: #020617; 
             display: flex; align-items: center; justify-content: center; 
-            font-weight: 900; border-radius: 12px; font-size: 1.8rem; 
-            cursor: pointer; transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
-            box-shadow: 0 4px 0 #cbd5e1;
+            font-weight: 800; border-radius: 10px; 
+            font-size: 1.4rem; /* እዚህ ጋር ነው የተቀነሰው */
+            cursor: pointer; transition: all 0.2s; 
+            box-shadow: 0 3px 0 #cbd5e1;
         }
         .cell.marked { 
             background: var(--red) !important; color: white !important; 
-            transform: scale(0.9) translateY(4px); box-shadow: none; 
+            transform: scale(0.9) translateY(3px); box-shadow: none; 
         }
-        .cell.hint { background: #fef08a; border: 2px solid var(--gold); box-shadow: 0 0 15px var(--gold-glow); }
-        .cell.free { background: var(--gold) !important; color: #000 !important; font-size: 0.8rem; letter-spacing: 1px; }
+        .cell.hint { background: #fef08a; border: 1.5px solid var(--gold); box-shadow: 0 0 10px var(--gold-glow); }
+        .cell.free { background: var(--gold) !important; color: #000 !important; font-size: 0.7rem; }
 
         .btn { 
-            width: 100%; padding: 18px; border: none; border-radius: 16px; 
-            font-weight: 800; cursor: pointer; margin-top: 12px; font-size: 1.1rem; 
-            transition: all 0.2s; text-transform: uppercase;
+            width: 100%; padding: 16px; border: none; border-radius: 14px; 
+            font-weight: 700; cursor: pointer; margin-top: 10px; font-size: 1rem; 
         }
-        .btn-gold { 
-            background: linear-gradient(135deg, #fde047, #ca8a04); 
-            color: #422006; box-shadow: 0 6px 20px rgba(202, 138, 4, 0.3);
-        }
-        .btn-gold:active { transform: scale(0.98); }
-        
-        .price-btn {
-            background: var(--card-bg); color: white; border: 1px solid rgba(255,255,255,0.1);
-            font-size: 1.3rem; height: 80px;
-        }
-        .price-btn b { color: var(--gold); }
+        .btn-gold { background: linear-gradient(135deg, #fde047, #ca8a04); color: #422006; }
     </style>
 </head>
 <body>
@@ -131,26 +113,26 @@
     <div id="winner-overlay"><h1 id="winner-name">---</h1></div>
 
     <div class="header">
-        <b id="u-name">...</b>
-        <div id="u-bal" style="color:var(--green); font-weight:800; font-size: 1.3rem;">0.00 ETB</div>
+        <b id="u-name" style="font-size: 1.1rem;">...</b>
+        <div id="u-bal" style="color:var(--green); font-weight:800; font-size: 1.2rem;">0.00 ETB</div>
     </div>
 
     <div id="app-content">
         <div id="home-page" class="page active">
-            <p style="text-align:center; color: #94a3b8; font-weight: 500;">ለመጀመር መጠን ይምረጡ</p>
-            <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 15px;">
-                <button onclick="goToCardPicker(10)" class="btn price-btn">10 <b>ETB</b></button>
-                <button onclick="goToCardPicker(20)" class="btn price-btn">20 <b>ETB</b></button>
-                <button onclick="goToCardPicker(50)" class="btn price-btn">50 <b>ETB</b></button>
-                <button onclick="goToCardPicker(100)" class="btn price-btn">100 <b>ETB</b></button>
-                <button onclick="goToCardPicker(500)" class="btn price-btn">500 <b>ETB</b></button>
-                <button onclick="goToCardPicker(1000)" class="btn price-btn">1000 <b>ETB</b></button>
+            <p style="text-align:center; color: #94a3b8; margin-bottom:15px;">ለመጀመር መጠን ይምረጡ</p>
+            <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px;">
+                <button onclick="goToCardPicker(10)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">10 ETB</button>
+                <button onclick="goToCardPicker(20)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">20 ETB</button>
+                <button onclick="goToCardPicker(50)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">50 ETB</button>
+                <button onclick="goToCardPicker(100)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">100 ETB</button>
+                <button onclick="goToCardPicker(500)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">500 ETB</button>
+                <button onclick="goToCardPicker(1000)" class="btn" style="background:var(--card-bg); color:white; border:1px solid rgba(255,255,255,0.1);">1000 ETB</button>
             </div>
-            <button id="admin-btn" class="btn" style="background:var(--green); display:none; margin-top:40px; color:white;" onclick="showAdmin()">🔧 ዳኛ መቆጣጠሪያ</button>
+            <button id="admin-btn" class="btn" style="background:var(--green); display:none; margin-top:30px; color:white;" onclick="showAdmin()">🔧 ዳኛ መቆጣጠሪያ</button>
         </div>
 
         <div id="admin-page" class="page">
-            <h3 style="text-align:center; color:var(--gold)">ዳኛ ገጽ</h3>
+            <h3 style="text-align:center; color:var(--gold)">ዳኛ መቆጣጠሪያ</h3>
             <div class="ball" id="admin-ball">?</div>
             <button class="btn btn-gold" onclick="drawSingle()">ቁጥር አውጣ</button>
             <button id="auto-btn" class="btn" style="background:#0ea5e9; color:white;" onclick="toggleAuto()">Auto ጀምር</button>
@@ -160,19 +142,19 @@
 
         <div id="picker-page" class="page">
             <h3 style="text-align:center;">ካርቴላ ይምረጡ</h3>
-            <div id="card-list" style="display:grid; grid-template-columns:repeat(4,1fr); gap:12px; max-height:480px; overflow-y:auto; padding:10px;"></div>
+            <div id="card-list" style="display:grid; grid-template-columns:repeat(4,1fr); gap:10px; max-height:450px; overflow-y:auto; padding:5px;"></div>
             <button class="btn" style="background:#334155; color:white;" onclick="showPage('home-page')">ተመለስ</button>
         </div>
 
         <div id="game-page" class="page">
-            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:20px;">
-                <button onclick="location.reload()" style="background:rgba(244, 63, 94, 0.2); color:var(--red); border:1px solid var(--red); border-radius:12px; padding:10px 20px; font-weight:bold;">ውጣ</button>
-                <span id="card-label" style="color:var(--gold); font-size:1.3rem; font-weight:800;"></span>
+            <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:15px;">
+                <button onclick="location.reload()" style="background:rgba(244, 63, 94, 0.2); color:var(--red); border:1px solid var(--red); border-radius:10px; padding:8px 15px; font-weight:bold;">ውጣ</button>
+                <span id="card-label" style="color:var(--gold); font-size:1.1rem; font-weight:800;"></span>
             </div>
             <div class="ball" id="live-ball">?</div>
             <div class="recent-numbers" id="live-recent"></div>
             <div class="bingo-grid" id="board"></div>
-            <button class="btn btn-gold" style="margin-top:35px; height:75px; font-size:1.8rem;" onclick="claimBingo()">BINGO!</button>
+            <button class="btn btn-gold" style="margin-top:25px; height:65px; font-size:1.5rem;" onclick="claimBingo()">BINGO!</button>
         </div>
     </div>
 
@@ -191,7 +173,6 @@
         document.getElementById('u-name').innerText = uName;
         if(uid == ADMIN_ID) document.getElementById('admin-btn').style.display = 'block';
 
-        // Winner Logic - 2 Seconds
         db.ref('game/winner').on('value', s => {
             const winner = s.val();
             if(winner) {
@@ -259,7 +240,7 @@
             else { autoInterval = setInterval(drawSingle, 2000); b.innerText="አቁም"; } 
         }
 
-        function resetGame() { if(confirm("ሁሉንም ለማጥፋት እርግጠኛ ነህ?")) { db.ref('game/drawn').set([]); db.ref('game/winner').set(null); } }
+        function resetGame() { if(confirm("RESET?")) { db.ref('game/drawn').set([]); db.ref('game/winner').set(null); } }
 
         function startGame(n) { 
             db.ref('users/'+uid+'/bal').set(myBal - selectedPrice); 
