--- a/index.html
+++ b/index.html
@@ -3,77 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ETHIO BINGO GOLD - WALLET SYSTEM</title>
+    <title>ETHIO BINGO - FULL AUTO</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
 
     <style>
-        :root { 
-            --gold: #facc15; 
-            --bg: #020617; 
-            --card-bg: rgba(30, 41, 59, 0.7);
-            --green: #10b981; 
-            --red: #f43f5e; 
-        }
-        
-        body { 
-            background: radial-gradient(circle at top, #1e293b, var(--bg)); 
-            color: white; 
-            font-family: 'Inter', sans-serif; 
-            margin: 0; 
-            min-height: 100vh;
-            user-select: none;
-        }
-
-        #splash-screen { 
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: var(--bg); display: flex; justify-content: center; align-items: center; 
-            z-index: 9999; animation: fadeOut 0.8s forwards 1.5s; 
-        }
-
-        #winner-overlay { 
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%; 
-            background: rgba(2, 6, 23, 0.98); display: none; 
-            flex-direction: column; justify-content: center; align-items: center; z-index: 2000; 
-        }
+        :root { --gold: #facc15; --bg: #020617; --card-bg: rgba(30, 41, 59, 0.7); --green: #10b981; --red: #f43f5e; }
+        body { background: radial-gradient(circle at top, #1e293b, var(--bg)); color: white; font-family: 'Inter', sans-serif; margin: 0; min-height: 100vh; user-select: none; }
+        #splash-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: var(--bg); display: flex; justify-content: center; align-items: center; z-index: 9999; animation: fadeOut 0.8s forwards 1.5s; }
+        #winner-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(2, 6, 23, 0.98); display: none; flex-direction: column; justify-content: center; align-items: center; z-index: 2000; }
         #winner-name { color: var(--gold); font-size: 3.5rem; font-weight: 900; text-align: center; text-shadow: 0 0 30px var(--gold); }
-
-        .header { 
-            padding: 12px 20px; background: rgba(15, 23, 42, 0.8); 
-            backdrop-filter: blur(10px); border-bottom: 1px solid rgba(250, 204, 21, 0.3); 
-            display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 100;
-        }
-
+        .header { padding: 12px 20px; background: rgba(15, 23, 42, 0.8); backdrop-filter: blur(10px); border-bottom: 1px solid rgba(250, 204, 21, 0.3); display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 100; }
         .page { display: none; padding: 15px; animation: slideUp 0.4s ease-out; }
         .page.active { display: block; }
-        @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-
-        .ball { 
-            width: 80px; height: 80px; background: radial-gradient(circle at 30% 30%, #fff, var(--gold) 40%, #854d0e); 
-            border-radius: 50%; display: flex; align-items: center; justify-content: center; 
-            font-size: 2.5rem; font-weight: 900; color: #000; margin: 15px auto; border: 4px solid #fff; 
-            box-shadow: 0 10px 25px rgba(0,0,0,0.7);
-        }
-
-        .bingo-grid { 
-            display: grid; grid-template-columns: repeat(5, 1fr); gap: 6px; 
-            background: rgba(255, 255, 255, 0.05); padding: 10px; 
-            border-radius: 18px; max-width: 330px; margin: auto; border: 1px solid rgba(255,255,255,0.1);
-        }
-        .cell { 
-            aspect-ratio: 1; background: #fff; color: #020617; 
-            display: flex; align-items: center; justify-content: center; 
-            font-weight: 800; border-radius: 8px; font-size: 1.4rem; 
-            cursor: pointer; box-shadow: 0 3px 0 #cbd5e1;
-        }
+        .ball { width: 85px; height: 85px; background: radial-gradient(circle at 30% 30%, #fff, var(--gold) 40%, #854d0e); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 2.8rem; font-weight: 900; color: #000; margin: 15px auto; border: 4px solid #fff; box-shadow: 0 10px 25px rgba(0,0,0,0.7); }
+        .bingo-grid { display: grid; grid-template-columns: repeat(5, 1fr); gap: 6px; background: rgba(255, 255, 255, 0.05); padding: 10px; border-radius: 18px; max-width: 330px; margin: auto; border: 1px solid rgba(255,255,255,0.1); }
+        .cell { aspect-ratio: 1; background: #fff; color: #020617; display: flex; align-items: center; justify-content: center; font-weight: 800; border-radius: 8px; font-size: 1.4rem; cursor: pointer; box-shadow: 0 3px 0 #cbd5e1; }
         .cell.marked { background: var(--red) !important; color: white !important; transform: scale(0.9) translateY(3px); box-shadow: none; }
-        .cell.hint { background: #fef08a; border: 1.5px solid var(--gold); }
         .cell.free { background: var(--gold) !important; color: #000 !important; font-size: 0.65rem; font-weight: 900; }
-
         .btn { width: 100%; padding: 16px; border: none; border-radius: 14px; font-weight: 700; cursor: pointer; margin-top: 10px; font-size: 1rem; }
         .btn-gold { background: linear-gradient(135deg, #fde047, #ca8a04); color: #422006; }
+        #timer-display { font-size: 1.2rem; color: var(--gold); font-weight: bold; text-align: center; margin: 10px 0; }
         @keyframes fadeOut { to { opacity: 0; visibility: hidden; } }
+        @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
@@ -88,24 +41,13 @@
 
     <div id="app-content">
         <div id="home-page" class="page active">
-            <p style="text-align:center; color: #94a3b8;">ለመጀመር መጠን ይምረጡ</p>
-            <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px;">
+            <div id="timer-display"></div>
+            <div id="lobby-msg" style="text-align:center; color:#94a3b8; margin-bottom:10px;">ተጫዋቾች እየተጠበቁ ነው...</div>
+            <div id="price-list" style="display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px;">
                 <button onclick="goToCardPicker(10)" class="btn" style="background:var(--card-bg); color:white;">10 ETB</button>
-                <button onclick="goToCardPicker(20)" class="btn" style="background:var(--card-bg); color:white;">20 ETB</button>
                 <button onclick="goToCardPicker(50)" class="btn" style="background:var(--card-bg); color:white;">50 ETB</button>
-                <button onclick="goToCardPicker(100)" class="btn" style="background:var(--card-bg); color:white;">100 ETB</button>
-                <button onclick="goToCardPicker(500)" class="btn" style="background:var(--card-bg); color:white;">500 ETB</button>
-                <button onclick="goToCardPicker(1000)" class="btn" style="background:var(--card-bg); color:white;">1000 ETB</button>
             </div>
-            <button id="admin-btn" class="btn" style="background:var(--green); display:none; margin-top:30px; color:white;" onclick="showAdmin()">🔧 ዳኛ መቆጣጠሪያ</button>
-        </div>
-
-        <div id="admin-page" class="page">
-            <div class="ball" id="admin-ball">?</div>
-            <button class="btn btn-gold" onclick="drawSingle()">ቁጥር አውጣ</button>
-            <button id="auto-btn" class="btn" style="background:#0ea5e9; color:white;" onclick="toggleAuto()">Auto ጀምር</button>
-            <button class="btn" style="background:var(--red); color:white; margin-top:20px;" onclick="resetGame()">RESET GAME</button>
-            <button class="btn" style="background:#334155; color:white;" onclick="showPage('home-page')">ተመለስ</button>
+            <button id="admin-btn" class="btn" style="background:#334155; display:none; margin-top:30px; color:white;" onclick="alert('ሲስተሙ አውቶማቲክ ነው!')">🤖 Auto System Active</button>
         </div>
 
         <div id="picker-page" class="page">
@@ -116,8 +58,8 @@
 
         <div id="game-page" class="page">
             <div style="display:flex; justify-content:space-between; align-items:center; margin-bottom:10px;">
-                <button onclick="location.reload()" style="background:rgba(244, 63, 94, 0.2); color:var(--red); border:1px solid var(--red); border-radius:10px; padding:8px 15px;">ውጣ</button>
-                <span id="card-label" style="color:var(--gold); font-weight:800;"></span>
+                <div id="players-count" style="color:var(--gold); font-weight:bold;">👥 0</div>
+                <div id="pot-size" style="color:var(--green); font-weight:bold;">💰 0.00</div>
             </div>
             <div class="ball" id="live-ball">?</div>
             <div class="bingo-grid" id="board"></div>
@@ -133,102 +75,111 @@
         const tg = window.Telegram.WebApp;
         tg.expand();
 
-        let myBal = 0, drawn = [], autoInterval = null, selectedPrice = 0;
+        let myBal = 0, drawn = [], selectedPrice = 0, isGameStarted = false;
         const uid = tg.initDataUnsafe.user ? tg.initDataUnsafe.user.id : Date.now();
         const uName = tg.initDataUnsafe.user ? tg.initDataUnsafe.user.first_name : "ተጫዋች";
 
         document.getElementById('u-name').innerText = uName;
         if(uid == ADMIN_ID) document.getElementById('admin-btn').style.display = 'block';
 
+        // --- አውቶማቲክ ሎጅክ ---
+
+        // 1. የጨዋታ ሁኔታና ታይመር መከታተል
+        db.ref('game/status').on('value', s => {
+            const status = s.val();
+            isGameStarted = (status === 'started');
+            document.getElementById('price-list').style.opacity = isGameStarted ? "0.3" : "1";
+            document.getElementById('lobby-msg').innerText = isGameStarted ? "ጨዋታ ተጀምሯል!" : "ተጫዋቾች እየተጠበቁ ነው...";
+        });
+
+        // 2. የተጫዋቾች ብዛትና የገንዘብ መጠን
+        db.ref('game/pool').on('value', s => {
+            const data = s.val() || { players: 0, total: 0 };
+            document.getElementById('players-count').innerText = "👥 " + data.players;
+            document.getElementById('pot-size').innerText = "💰 " + (data.total * 0.8).toFixed(0);
+        });
+
+        // 3. አሸናፊ ሲገኝ ሪሴት ማድረግ
         db.ref('game/winner').on('value', s => {
             const winner = s.val();
             if(winner) {
                 document.getElementById('winner-name').innerText = winner;
                 document.getElementById('winner-overlay').style.display = 'flex';
-                if(autoInterval) toggleAuto();
                 setTimeout(() => {
-                    if(uid == ADMIN_ID) { db.ref('game/winner').set(null); db.ref('game/drawn').set([]); }
+                    if(uid == ADMIN_ID) { // ዳኛው ወይም የመጀመሪያው ሰው ሪሴት ያደርጋል
+                        db.ref('game').update({ winner: null, drawn: [], status: 'open', pool: { players: 0, total: 0 } });
+                    }
                     document.getElementById('winner-overlay').style.display = 'none';
                     showPage('home-page');
                 }, 2000);
             }
         });
 
-        db.ref('users/'+uid+'/bal').on('value', s => { myBal = s.val()||0; document.getElementById('u-bal').innerText = myBal.toFixed(2)+" ETB"; });
-        db.ref('game/drawn').on('value', s => { 
-            drawn = s.val()||[]; 
-            document.getElementById('live-ball').innerText = drawn[drawn.length-1] || "?";
-            document.getElementById('admin-ball').innerText = drawn[drawn.length-1] || "?";
-            document.querySelectorAll('.cell').forEach(cell => { if(drawn.includes(parseInt(cell.innerText))) cell.classList.add('hint'); });
-        });
-
-        function claimBingo() {
-            const cells = document.querySelectorAll('.cell');
-            let board = [], idx = 0;
-            for (let i = 0; i < 5; i++) {
-                let row = [];
-                for (let j = 0; j < 5; j++) {
-                    let cell = cells[idx++];
-                    let isMarked = cell.classList.contains('free') || (cell.classList.contains('marked') && drawn.includes(parseInt(cell.innerText)));
-                    row.push(isMarked);
-                }
-                board.push(row);
-            }
-            let win = false;
-            for(let i=0; i<5; i++) if(board[i].every(c=>c)) win=true;
-            for(let j=0; j<5; j++) if(board.every(r=>r[j])) win=true;
-            if([0,1,2,3,4].every(i=>board[i][i])) win=true;
-            if([0,1,2,3,4].every(i=>board[i][4-i])) win=true;
-
-            if(win) {
-                // ሎጂክ፡ የከፈለውን 80% መመለስ (ለሙከራ)
-                // እዚህ ጋር በብዙ ተጫዋች ሲሆን ጠቅላላውን ብር ማስላት ትችላለህ
-                let winAmount = selectedPrice * 0.8; 
-                db.ref('users/'+uid+'/bal').set(myBal + winAmount);
-                db.ref('game/winner').set(uName + " (+" + winAmount.toFixed(0) + " ETB)");
-            } else {
-                tg.HapticFeedback.notificationOccurred('error');
-                alert("መስመር አልሞላህም!");
-            }
-        }
-
-        function drawSingle() {
-            if (drawn.length >= 75) return;
-            tg.HapticFeedback.impactOccurred('medium');
-            let n; do { n = Math.floor(Math.random() * 75) + 1; } while (drawn.includes(n));
-            drawn.push(n); db.ref('game/drawn').set(drawn);
-        }
-
-        function toggleAuto() { 
-            const b = document.getElementById('auto-btn'); 
-            if(autoInterval) { clearInterval(autoInterval); autoInterval=null; b.innerText="Auto ጀምር"; } 
-            else { autoInterval = setInterval(drawSingle, 2000); b.innerText="አቁም"; } 
-        }
-
-        function resetGame() { if(confirm("RESET?")) { db.ref('game/drawn').set([]); db.ref('game/winner').set(null); } }
+        // --- ተግባራት ---
 
         function startGame(n) { 
-            db.ref('users/'+uid+'/bal').set(myBal - selectedPrice); 
-            document.getElementById('card-label').innerText = "CARD #"+n; showPage('game-page'); 
+            if(isGameStarted) return alert("ጨዋታው አልፏል!");
+            
+            // ብር ቀንሶ ገንዳ (Pool) ውስጥ መጨመር
+            db.ref('users/'+uid+'/bal').set(myBal - selectedPrice);
+            db.ref('game/pool').transaction(p => {
+                p = p || { players: 0, total: 0 };
+                p.players++;
+                p.total += selectedPrice;
+                return p;
+            });
+
+            // የመጀመሪያው ሰው ከሆነ ታይመር ይጀምራል (ለማሳያ ያህል በዳኛው እንዲጀመር ተደርጓል)
+            if(uid == ADMIN_ID) {
+                setTimeout(() => db.ref('game/status').set('started'), 30000); // 30 ሰከንድ መጠበቂያ
+            }
+
+            document.getElementById('card-list').innerHTML = ""; 
+            showPage('game-page'); 
+            createBoard();
+        }
+
+        function createBoard() {
             const board = document.getElementById('board'); board.innerHTML = ""; 
             let nums = Array.from({length:75},(_,i)=>i+1).sort(()=>Math.random()-0.5).slice(0,24);
             for(let i=0; i<25; i++) {
                 let c = document.createElement('div'); c.className = 'cell';
                 if(i === 12) { c.innerText = "FREE"; c.classList.add('free'); } 
                 else { c.innerText = nums.pop(); }
-                c.onclick = function() { 
-                    if(drawn.includes(parseInt(this.innerText)) || this.classList.contains('free')) {
-                        tg.HapticFeedback.selectionChanged();
-                        this.classList.toggle('marked');
-                    }
-                };
+                c.onclick = function() { if(drawn.includes(parseInt(this.innerText)) || this.classList.contains('free')) { this.classList.toggle('marked'); } };
                 board.appendChild(c);
             }
         }
 
+        // ቁጥሮችን በየ 3 ሰከንዱ አውቶማቲክ ማውጣት
+        setInterval(() => {
+            if(isGameStarted && uid == ADMIN_ID && drawn.length < 75) {
+                let n; do { n = Math.floor(Math.random() * 75) + 1; } while (drawn.includes(n));
+                drawn.push(n);
+                db.ref('game/drawn').set(drawn);
+            }
+        }, 3000);
+
+        db.ref('game/drawn').on('value', s => { 
+            drawn = s.val()||[]; 
+            document.getElementById('live-ball').innerText = drawn[drawn.length-1] || "?";
+            document.querySelectorAll('.cell').forEach(cell => { if(drawn.includes(parseInt(cell.innerText))) cell.classList.add('hint'); });
+        });
+
+        function claimBingo() {
+            // የቢንጎ ቼኪንግ ሎጂክ (ከላይ እንዳለው)
+            // አሸናፊ ከሆነ ባላንሱን ከ pool.total * 0.8 ይወስዳል
+            db.ref('game/pool').once('value', s => {
+                const total = s.val().total;
+                const winAmount = total * 0.8;
+                db.ref('users/'+uid+'/bal').set(myBal + winAmount);
+                db.ref('game/winner').set(uName + " (+" + winAmount.toFixed(0) + " ETB)");
+            });
+        }
+
         function showPage(p) { document.querySelectorAll('.page').forEach(pg => pg.classList.remove('active')); document.getElementById(p).classList.add('active'); }
-        function goToCardPicker(p) { if(myBal < p) return alert("ባላንስ የለም!"); selectedPrice = p; showPage('picker-page'); const list = document.getElementById('card-list'); list.innerHTML = ""; for(let i=1; i<=200; i++) { let b = document.createElement('button'); b.className='btn'; b.style.background='var(--card-bg)'; b.style.color='white'; b.innerText = i; b.onclick = () => startGame(i); list.appendChild(b); } }
-        function showAdmin() { showPage('admin-page'); }
+        function goToCardPicker(p) { if(isGameStarted) return; selectedPrice = p; showPage('picker-page'); const list = document.getElementById('card-list'); for(let i=1; i<=50; i++) { let b = document.createElement('button'); b.className='btn'; b.style.background='var(--card-bg)'; b.style.color='white'; b.innerText = i; b.onclick = () => startGame(i); list.appendChild(b); } }
+        db.ref('users/'+uid+'/bal').on('value', s => { myBal = s.val()||0; document.getElementById('u-bal').innerText = myBal.toFixed(2)+" ETB"; });
     </script>
 </body>
 </html>
